# sqlcomp

./: .coderabbit.yaml  .gitignore  .octocov.yml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  compose.yaml  package-lock.json  package.json
.githooks/: commit-message-template  commit-msg  pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/actions/setup-node/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: README.md  _coverage-check.yml  _examples-check.yml  _format-check.yml  _mysql-fixtures-check.yml  _mysql-integration.yml  _rust-check.yml  _typescript-generated-check.yml  on_pull_request_coverage-check.yml  on_pull_request_examples-check.yml  on_pull_request_mysql-fixtures-check.yml  on_pull_request_mysql-integration.yml  on_pull_request_rust-check.yml  on_pull_request_typescript-generated-check.yml  on_push_coverage-check.yml  on_push_examples-check.yml  on_push_mysql-fixtures-check.yml  on_push_mysql-integration.yml  on_push_rust-check.yml  on_push_typescript-generated-check.yml
crates/adapters/: Cargo.toml
crates/adapters/src/: config_jsonc.rs  diagnostics.rs  dialect_mysql.rs  lib.rs  metadata_mysql_sqlx.rs  output_fs.rs  source_fs.rs  target_typescript.rs
crates/adapters/src/config_jsonc/: diagnostics.rs  jsonc.rs  loader.rs  mod.rs  paths.rs  raw.rs  tests.rs  validation.rs
crates/adapters/src/config_jsonc/type_mapping/: mod.rs  values.rs
crates/adapters/src/dialect_mysql/: mutation.rs
crates/adapters/src/metadata/: mod.rs
crates/adapters/src/metadata/mysql/: mod.rs
crates/adapters/src/metadata/mysql/sqlx/: describe.rs  diagnostics.rs  mod.rs  result_mapping.rs  schema_columns.rs
crates/adapters/src/metadata/mysql/sqlx/param_inference/: contexts.rs  mod.rs  mutation_contexts.rs  mutations.rs  result_columns.rs  tables.rs  tests.rs  unsupported_contexts.rs
crates/adapters/src/metadata/mysql/sqlx/param_inference/mutations/: mod.rs  param_contexts.rs  param_usages.rs  table_sources.rs
crates/adapters/src/metadata/mysql/sqlx/param_inference/tests/: context_traversal.rs  enum_type_refs.rs  schema_sources.rs
crates/adapters/src/source_fs/: diagnostics.rs  discovery.rs  inline_markers.rs  mod.rs  reader.rs  scanner.rs  source_units.rs
crates/adapters/src/source_fs/inline_markers/: scanners.rs
crates/adapters/src/source_fs/metadata/: fields.rs  hjson.rs  mod.rs  parsers.rs
crates/adapters/src/source_fs/tests/: inline_markers.rs  metadata.rs  mod.rs  reader.rs  repeat_markers.rs  scanner.rs  source_units.rs
crates/adapters/tests/: metadata.rs  mysql_fixture_metadata.rs  mysql_metadata_spike.rs  sqlay_invalid_fixtures.rs  sqlcomp_invalid_fixtures.rs
crates/adapters/tests/metadata/mysql/: fixture_contracts.rs  fixture_support.rs  invalid_fixtures.rs  mod.rs  provider.rs  type_coverage.rs  workflow.rs
crates/app/: Cargo.toml
crates/app/src/: compile.rs  constants.rs  init.rs  lib.rs  planning.rs  ports.rs  query_compiler.rs  tests.rs
crates/app/tests/: repeat_pipeline.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  diagnostics.rs  help.rs  lib.rs  output.rs  runtime.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  generated.rs  ir.rs  lib.rs  metadata.rs  plan.rs  query.rs  reporting.rs
crates/core/tests/: ir.rs  query.rs
docs/: architecture.md  coverage.md  current-scope.md  mutation-execution.md  mvp.md  query-execution.md  structure-baseline.json  vision.md
docs/adr/: 0001-use-mysql-8-for-mvp.md  0002-use-typescript-target-generator-first.md  0003-use-hjson-sqlay-comments.md  0005-do-not-transform-generated-names.md  0006-define-mvp-cli-config-and-generation-workflow.md  0007-use-examples-and-fixtures-as-generated-e2e-artifacts.md  0008-define-select-param-support.md  0009-define-initial-select-slot-fragment-support.md  0010-define-initial-mysql-mutation-builder-support.md  0012-define-configurable-typescript-type-mapping-overrides.md
docs/spikes/: 0001-sqlx-mysql-statement-metadata.md
examples/bookstore/: README.md  assert-generated-surface.ts  schema.sql  seed.sql  sqlay.config.json
examples/bookstore/sql/: book_filters.sql  books.sql  mutations.sql  orders.sql
fixtures/mysql/: README.md
fixtures/mysql/init/: 001_metadata_fixture.sql  002_business_fixture.sql
fixtures/mysql/queries/: business.sql  metadata.sql
fixtures/sql/: README.md  assert-generated-surface.ts  schema.sql  seed.sql  sqlay.invalid.config.json  sqlcomp.valid.config.json  tsconfig.json
fixtures/sql/invalid/: direct_param_repeat_id_collision.sql  direct_param_slot_id_collision.sql  duplicate_fragment_ids.sql  duplicate_ids.sql  duplicate_query_fragment_id.sql  exec_cardinality.sql  fragment_invalid_id.sql  fragment_param_inference_failure.sql  fragment_param_repeat_branch_collision.sql  fragment_param_sample_placeholder.sql  fragment_raw_placeholder.sql  invalid_id.sql  (+65 more)
fixtures/typescript/: README.md  assert-generated-surface.ts  tsconfig.json
script/: check-all.sh  check-baseline.sh  check-coverage.sh  check-examples.sh  check-mysql-fixtures.sh  check-structure.sh  mysql-down.sh  mysql-integration.sh  mysql-reset.sh  mysql-up.sh  typescript-generated-check.sh
script/dev/: compose.sh
src/: main.rs
tests/: check_scripts.rs  cli_binary.rs  coverage_workflow.rs  crate_roots.rs
tests/cli_binary/: check.rs  compile.rs  config.rs  help.rs  init.rs  support.rs
(+41 files in other folders)
