[workspace]
members = [
    ".",
    "crates/adapters",
    "crates/app",
    "crates/cli",
    "crates/core",
]
default-members = [
    ".",
    "crates/adapters",
    "crates/app",
    "crates/cli",
    "crates/core",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/tanaka-takuto/sqlcomp"

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

[package]
name = "sqlcomp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQL Compose & Compile CLI."
repository.workspace = true
readme = "README.md"
keywords = ["codegen", "mysql", "sql", "typescript"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sqlcomp"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
sqlcomp-cli = { path = "crates/cli" }
