[workspace]
members = [
    ".",
    "crates/adapters",
    "crates/app",
    "crates/cli",
    "crates/core",
]
default-members = [
    ".",
    "crates/adapters",
    "crates/app",
    "crates/cli",
    "crates/core",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/tanaka-takuto/sqlay"

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = { level = "allow", priority = 1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

[package]
name = "sqlay"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQL Inlay CLI."
repository.workspace = true
readme = "README.md"
keywords = ["codegen", "mysql", "sql", "typescript"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sqlay"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
sqlay-cli = { path = "crates/cli" }

[dev-dependencies]
serde_json = "1.0.150"
