[package]
name = "sqlcomp-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Internal sqlcomp adapter implementations crate."
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlcomp-app = { path = "../app" }
sqlcomp-core = { path = "../core" }

[dev-dependencies]
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "mysql", "tls-rustls", "macros"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
