[package]
name = "sqlay-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Internal sqlay adapter implementations crate."
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
deser-hjson = "2.2.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlay-app = { path = "../app" }
sqlay-core = { path = "../core" }
sqlparser = "0.62.0"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "mysql", "tls-rustls", "macros"] }
tokio = { version = "1.52.3", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
