[package]
name = "sqlay-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Internal sqlay CLI orchestration crate."
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
sqlay-adapters = { path = "../adapters" }
sqlay-app = { path = "../app" }
sqlay-core = { path = "../core" }
